impostata struttura base header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,26 @@
 </head>
 <body>
     <header>
-        <div class="menu-left"></div>
-        <div class="menu-rigth"></div>
+        <div class="menu menu-left">
+            <div class="icons-scudo">
+                <i class="fa-solid fa-shield"></i>
+                <i class="fa-solid fa-check"></i>
+            </div>
+            <div class="record">
+                <div class="circle">
+                    <div class="cirlce red"></div>
+                </div>
+                <span>Recording...</span>
+                <button><i class="fa-solid fa-pause"></i></button>
+                <button><i class="fa-solid fa-stop"></i></button>
+            </div>
+        </div>
+        <div class="menu menu-rigth">
+            <button>
+                <i class="fa-solid fa-grip"></i>
+                <span>Wiew</span>
+            </button>
+        </div>
     </header>
     <main></main>
     <footer></footer>
