sistemato stile scudo verde in header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="menu menu-left">
             <div class="icons-scudo">
                 <i class="fa-solid fa-shield"></i>
-                <i class="fa-solid fa-check"></i>
+                <small><i class="fa-solid fa-check"></i></small>
             </div>
             <div class="record">
                 <div class="circle">
