cercio recoding finito

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="record">
                 <div class="circle">
-                    <div class="cirlce red"></div>
+                    <div class="cirlce cirlce-red"></div>
                 </div>
                 <span>Recording...</span>
                 <button><i class="fa-solid fa-pause"></i></button>
