--- a/index.html
+++ b/index.html
@@ -7,27 +7,30 @@
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- google font -->
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- /google font -->
     <link rel="stylesheet" href="css/style.css">
     <title>Nuovo Progetto</title>
 </head>
 <body>
     <header>
-        <div class="menu menu-left">
+        <div class="menu">
             <div class="icons-scudo">
                 <i class="fa-solid fa-shield"></i>
                 <small><i class="fa-solid fa-check"></i></small>
             </div>
             <div class="record">
-                <div class="circle">
+                <button class="circle">
                     <div class="cirlce cirlce-red"></div>
-                </div>
+                </button>
                 <span>Recording...</span>
                 <button><i class="fa-solid fa-pause"></i></button>
                 <button><i class="fa-solid fa-stop"></i></button>
             </div>
         </div>
-        <div class="menu menu-rigth">
+        <div class="menu">
             <button>
                 <i class="fa-solid fa-grip"></i>
                 <span>Wiew</span>
@@ -35,6 +38,9 @@
         </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        
+
+    </footer>
 </body>
 </html>
