--- a/index.html
+++ b/index.html
@@ -37,10 +37,26 @@
             </button>
         </div>
     </header>
-    <main></main>
-    <footer>
-        
+    <main>
 
+    </main>
+    <footer>
+        <div class="tools-audio-video">
+            <button class="btn-icon btn-menu microphone"><i class="fa-solid fa-microphone"></i><div>Mute</div></button>
+            <button class="btn-icon btn-menu video"><i class="fa-solid fa-video"></i><div>stop video</div></button>
+        </div>
+        <div class="tool-conference">
+            <button class="btn-icon security"><i class="fa-solid fa-shield-halved"></i><div>security</div></button>
+            <button class="btn-icon btn-menu partecipants"><i class="fa-solid fa-user-group"></i><span>36</span><div>partecipants</div></button>
+            <button class="btn-icon chat"><i class="fa-solid fa-message"></i><div>chat</div></button>
+            <button class="btn-icon btn-menu screen"><div><i class="fa-solid fa-circle-arrow-up"></i></div><div>share screen</div></button>
+            <button class="btn-icon rec"><i class="fa-solid fa-pause"></i><i class="fa-solid fa-stop"></i><div>pause/Stop recording</div></button>
+            <button class="btn-icon reaction"><i class="fa-regular fa-face-smile"></i><div>reaction</div></button>
+            <button class="btn-icon app"><i class="fa-solid fa-circle-nodes"></i><div>Apps</div></button>
+        </div>
+        <div class="close-call">
+            <button class="btn-red">End</button>
+        </div>
     </footer>
 </body>
 </html>
