--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </div>
     </header>
     <main>
-
+        <div class="container">
+            <div class="user"></div>
+        </div>
     </main>
     <footer>
         <div class="tools-audio-video">
