--- a/index.html
+++ b/index.html
@@ -40,6 +40,26 @@
     <main>
         <div class="container">
             <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
+            <div class="user"></div>
         </div>
     </main>
     <footer>
