--- a/index.html
+++ b/index.html
@@ -39,27 +39,36 @@
     </header>
     <main>
         <div class="container">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
+            <div class="user"><div class="user-info"><i class="fa-solid fa-microphone-lines-slash"></i><div>Loerm Ipsum</div></div></div>
         </div>
     </main>
     <footer>
